--- a/MatrixFile/MatrixFile.vcxproj
+++ b/MatrixFile/MatrixFile.vcxproj
@@ -115,6 +115,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="MatrixFile.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="MatrixTest.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
