--- a/MatrixFile/MatrixFile.vcxproj
+++ b/MatrixFile/MatrixFile.vcxproj
@@ -116,9 +116,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="MatrixFile.h" />
+    <ClInclude Include="MatrixTest.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="MatrixTest.cpp" />
+    <ClCompile Include="MatrixFile.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
